--- a/ac/css/style.css
+++ b/ac/css/style.css
@@ -1,6 +1,7 @@
 .contato{
     text-align: center;
     margin-top: 100px;
+    margin-bottom: 240px;
 }
 .contato h2{
     font-weight: lighter;
@@ -12,7 +13,7 @@
 
 .sobre{
     text-align: center;
-    margin: 20%;
+    margin: 18%;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
 }
@@ -31,7 +32,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    margin-top: 110px;
+    margin-top: 50px;
     margin-bottom: 50px;
 }
 
@@ -46,17 +47,51 @@
     justify-content: center;
 }
 
-.carousel-inner{
+.novidades h1{
+    margin-left: 85px;
     display: flex;
+    flex-direction: row;
 }
 
-.carousel-inner img{
-    width: 100%;
-    height: 500px;
+.corbtn{
+    background-color: rgb(39, 126, 126);
+    border-color: rgb(39, 126, 126);
 }
 
-.carousel-control-next{
-
+.corbtn:hover{
+    background-color: rgb(77, 143, 121);
+    border-color: rgb(77, 143, 121);
 }
+
+.produtos{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 50px;
+    margin-bottom: 50px;
+}
+
+.produtos img{
+    border-radius: 10px;
+}
+
+.produto h2{
+    font-size: 30px;
+}
+
+.produto h4{
+    font-size: 15px;
+}
+
+.produto{
+    width: 200px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
 
 
